k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sistemagdp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sistemagdp-backend
  template:
    metadata:
      labels:
        app: sistemagdp-backend
    spec:
      containers:
        - name: sistemagdp-backend
          image: backend-app:1.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3006
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
