k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sistemagdp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sistemagdp-frontend
  template:
    metadata:
      labels:
        app: sistemagdp-frontend
    spec:
      containers:
        - name: sistemagdp-frontend
          image: frontend-app:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
