k8s/sistemagdp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sistemagdp-ingress
spec:
  rules:
    - host: sistgdp.local
      http:
        paths:
          # frontend en /
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sistemagdp-frontend-service
                port:
                  number: 80
          # backend en /api
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sistemagdp-backend-service
                port:
                  number: 3006
